# vc-interests-matcher

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-entrypoint.sh  pyproject.toml
app/: __init__.py  glove.py  main.py
